Support for OGC CSW
